@@ -150,6 +150,7 @@
                     <argLine>
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.cli=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.exec=ALL-UNNAMED
+                        --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
